# embedorg

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
authentication/: auth_api.py  auth_init.py  auth_settings.py  get_user.py  secret_hash.py  sign_out.py
cloud_watch_logs/: client_connect.py  settings.py
database/: create_schema.py
database/apis/: associations.py  embeddings.py  files.py  projects.py  teams.py
defaults/: bearer_setting.py  db_engine.py  errors.py  models.py  s3_client.py  standard_response.py
embeddings/: doc_loader.py  embedding_settings.py  helper_functions.py  vs_connect.py
embeddings/apis/: crud_embeddings.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/home/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/teams/: page.tsx
frontend/components/: app-sidebar.tsx  auth-check.tsx  header.tsx  layout-wrapper.tsx
frontend/components/ui/: breadcrumb.tsx
frontend/lib/: api.ts  authUtils.ts  config.ts
frontend/store/: userContext.tsx
publish/: publish_apis.py
